--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feladatok TypeScript segítségével</title>
 </head>
 <body>
     <script src="typescriptBEuzemeles.js"></script><!--Itt hivatkozunk a fordítótt TS kódra, ami a JS állományban van!-->
+    <script src="tsFeladatok.js"></script>
 </body>
 </html>
