Függvényes óra végi állapot

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Feladatok TypeScript segítségével</title>
 </head>
 <body>
-    <script src="typescriptBEuzemeles.js"></script><!--Itt hivatkozunk a fordítótt TS kódra, ami a JS állományban van!-->
+    <!--
+    <script src="typescriptBEuzemeles.js"></script>
     <script src="tsFeladatok.js"></script>
+    <script src="typescriptFuggvenyek.js"></script>
+    -->
+    <script src="tsFuggvenyesFeladatok.js"></script>
 </body>
 </html>
